corrects minor button spacing issue

--- a/style.css
+++ b/style.css
@@ -224,7 +224,6 @@ input[type="number"] {
     padding: 10px 15px;
     border-radius: 4px;
     cursor: pointer;
-    margin-top: 15px;
 }
 
 .side-button {
